--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "npm run unit-test; npm run integration-test",
     "start": "node bin/index.js",
     "build": "webpack  --config config/webpack.config.js",
-    "watch": "webpack  --config config/webpack.config.js -w",
+    "watch": "webpack  --config config/webpack.config.js -w --mode=development",
     "msgmerge": "node local_modules/merge-po/index"
   },
   "repository": {
@@ -20,16 +20,15 @@
   "author": "Qwant Research",
   "license": "Apache",
   "devDependencies": {
-    "babel-preset-env": "1.7.0",
-    "@qwant/map-style-builder": "git+https://github.com/QwantResearch/map-style-builder.git",
-    "@qwant/qwant-basic-gl-style": "git+https://github.com/QwantResearch/qwant-basic-gl-style.git",
     "@qwant/config-sanitizer-loader": "file:local_modules/config-sanitizer-loader",
-    "@qwant/po-js": "file:local_modules/po-js",
+    "@qwant/map-style-builder": "git+https://github.com/QwantResearch/map-style-builder.git",
     "@qwant/map-style-loader": "file:local_modules/map-style-loader",
     "@qwant/merge-i18n-source-loader": "file:local_modules/merge-i18n-source-loader",
     "@qwant/merge-po-loader": "file:local_modules/merge-po-loader",
     "@qwant/nconf-getter": "file:local_modules/nconf_getter",
+    "@qwant/po-js": "file:local_modules/po-js",
     "@qwant/po-js-loader": "file:local_modules/po-js-loader",
+    "@qwant/qwant-basic-gl-style": "git+https://github.com/QwantResearch/qwant-basic-gl-style.git",
     "babel-core": "6.26.3",
     "babel-jest": "^22.1.0",
     "babel-loader": "7.1.2",
@@ -40,7 +39,7 @@
     "esdoc-standard-plugin": "1.0.0",
     "extract-loader": "1.0.1",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
+    "file-loader": "1.1.11",
     "http-server-pwa": "^0.1.3",
     "jest": "^22.1.1",
     "js-loader": "0.1.1",
@@ -58,7 +57,8 @@
     "sass-loader": "6.0.6",
     "strftime": "https://github.com/QwantResearch/strftime.git",
     "style-loader": "0.19.0",
-    "webpack": "3.10.0",
+    "uglifyjs-webpack-plugin": "1.2.7",
+    "webpack": "4.15.1",
     "yaml-jest": "^1.0.5",
     "yaml-loader": "^0.5.0"
   },
@@ -71,6 +71,7 @@
     "express": "^4.16.3",
     "nconf": "^0.10.0",
     "nconf-yaml": "^1.0.2",
-    "node-yaml": "3.1.1"
+    "node-yaml": "3.1.1",
+    "webpack-cli": "^3.0.8"
   }
 }
